# imm-velocity-consistency

./: .gitignore  CMakeLists.txt  config.env  readme.md
python_algorithms/: velocity_diagnostic.py
src/: main.cpp
src/Core/VelocityEstimator/: EstimatorConstants.h  VelocityConsistencyEstimator.cpp  VelocityConsistencyEstimator.h  VelocityConsistencyEstimatorHelper.cpp  VelocityConsistencyEstimatorHelper.h
src/Demo/: VelocityExperiment.h  runAlgorithmsDemo.h  runPlotPython.cpp  runVelocityEstimatorDemo.cpp  velocityEstimatorExample.h  velocityEstimatorExample1.h  velocityEstimatorExample2.h  velocityEstimatorExample3.h
src/Infrastructure/: EnvLoader.cpp  EnvLoader.h  PythonBridge.cpp  PythonBridge.h
tests/: CMakeLists.txt  test_main.cpp  test_smoke.cpp  test_velocity.cpp
